--- a/tests/receiver/Makefile.am
+++ b/tests/receiver/Makefile.am
@@ -1,7 +1,7 @@
 CFLAGS = @OOH323CFLAGS@
 noinst_PROGRAMS = ooReceiver
-ooReceiver_SOURCES = ooReceiver.c ooReceiver.h
-INCLUDES = -I$(top_builddir)/src -I$(top_builddir)/src/h323 -I$(top_builddir)/src/h450
+ooReceiver_SOURCES = ooReceiver.c ooReceiver.h oosndrtp.h oosndrtp.c
+INCLUDES = -I$(top_builddir)/src -I$(top_builddir)/src/h323
 ooReceiver_LDADD = -loostk -ldl -lpthread
 ooReceiver_LDFLAGS = -L$(top_builddir)/src
 
