--- a/configure.in
+++ b/configure.in
@@ -30,7 +30,10 @@ AC_LANG_C
 
 dnl not required as using libtool AC_PROG_RANLIB
 AC_HEADER_STDC
-AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h stddef.h stdlib.h string.h sys/socket.h unistd.h sys/ioctl.h linux/soundcard.h])
+AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h stddef.h stdlib.h string.h sys/socket.h unistd.h sys/ioctl.h])
+
+AC_CHECK_HEADERS(linux/soundcard.h, [], [AC_MSG_WARN(******linux/soundcard.h is required for media library.
+                  ******You won't be able to build sample media library***)])
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
