--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -91,7 +91,7 @@ CFLAGS = @OOH323CFLAGS@
 
 lib_LIBRARIES = liboostk.a
 #liboostk_la_LDFLAGS = -version-info 1:1:0
-liboostk_a_SOURCES = ooras.c ooras.h context.c ooCommon.h ooDateTime.h ooDateTime.c decode.c dlist.c encode.c errmgmt.c memheap.c memheap.h ooasn1.h oo.c oochannels.c oochannels.h oo.h ooh245.c ooh245.h oohdr.h ooper.h ooports.c ooports.h ooq931.c ooq931.h ooCapability.c ooCapability.h ooSocket.c ooSocket.h ootypes.h perutil.c SList.c SList.h asn1CEvtHndlr.c asn1CEvtHndlr.h ooCalls.c ooCalls.h ooStackCmds.c ooStackCmds.h ooh323.c ooh323.h ooh323ep.c ooh323ep.h printHandler.c printHandler.h rtconv.c rtctype.c rtctype.h h323/H235-SECURITY-MESSAGES.c h323/H235-SECURITY-MESSAGESDec.c h323/H235-SECURITY-MESSAGESEnc.c h323/H235-SECURITY-MESSAGES.h h323/H323-MESSAGES.c h323/H323-MESSAGESDec.c h323/H323-MESSAGESEnc.c h323/H323-MESSAGES.h h323/MULTIMEDIA-SYSTEM-CONTROL.c h323/MULTIMEDIA-SYSTEM-CONTROLDec.c h323/MULTIMEDIA-SYSTEM-CONTROLEnc.c h323/MULTIMEDIA-SYSTEM-CONTROL.h
+liboostk_a_SOURCES = ooras.c ooras.h context.c ooCommon.h ooDateTime.h ooDateTime.c decode.c dlist.c encode.c errmgmt.c memheap.c memheap.h ooasn1.h oo.c oochannels.c oochannels.h oo.h ooh245.c ooh245.h oohdr.h ooper.h ooports.c ooports.h ooq931.c ooq931.h ooCapability.c ooCapability.h ooSocket.c ooSocket.h ootypes.h perutil.c SList.c SList.h asn1CEvtHndlr.c asn1CEvtHndlr.h ooCalls.c ooCalls.h ooStackCmds.c ooStackCmds.h ooh323.c ooh323.h ooh323ep.c ooh323ep.h printHandler.c printHandler.h rtconv.c rtctype.c rtctype.h h323/H235-SECURITY-MESSAGESDec.c h323/H235-SECURITY-MESSAGESEnc.c h323/H235-SECURITY-MESSAGES.h h323/H323-MESSAGES.c h323/H323-MESSAGESDec.c h323/H323-MESSAGESEnc.c h323/H323-MESSAGES.h h323/MULTIMEDIA-SYSTEM-CONTROL.c h323/MULTIMEDIA-SYSTEM-CONTROLDec.c h323/MULTIMEDIA-SYSTEM-CONTROLEnc.c h323/MULTIMEDIA-SYSTEM-CONTROL.h
 
 INCLUDES = -Ih323
 
@@ -115,7 +115,6 @@ am_liboostk_a_OBJECTS = ooras.$(OBJEXT) context.$(OBJEXT) \
         asn1CEvtHndlr.$(OBJEXT) ooCalls.$(OBJEXT) ooStackCmds.$(OBJEXT) \
         ooh323.$(OBJEXT) ooh323ep.$(OBJEXT) printHandler.$(OBJEXT) \
         rtconv.$(OBJEXT) rtctype.$(OBJEXT) \
-        H235-SECURITY-MESSAGES.$(OBJEXT) \
         H235-SECURITY-MESSAGESDec.$(OBJEXT) \
         H235-SECURITY-MESSAGESEnc.$(OBJEXT) H323-MESSAGES.$(OBJEXT) \
         H323-MESSAGESDec.$(OBJEXT) H323-MESSAGESEnc.$(OBJEXT) \
@@ -131,7 +130,7 @@ LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 depcomp = $(SHELL) $(top_srcdir)/config/depcomp
 am__depfiles_maybe = depfiles
-@AMDEP_TRUE@DEP_FILES = ./$(DEPDIR)/H235-SECURITY-MESSAGES.Po \
+@AMDEP_TRUE@DEP_FILES = \
 @AMDEP_TRUE@    ./$(DEPDIR)/H235-SECURITY-MESSAGESDec.Po \
 @AMDEP_TRUE@    ./$(DEPDIR)/H235-SECURITY-MESSAGESEnc.Po \
 @AMDEP_TRUE@    ./$(DEPDIR)/H323-MESSAGES.Po \
@@ -206,7 +205,6 @@ uninstall-libLIBRARIES:
 
 clean-libLIBRARIES:
         -test -z "$(lib_LIBRARIES)" || rm -f $(lib_LIBRARIES)
-H235-SECURITY-MESSAGES.$(OBJEXT): h323/H235-SECURITY-MESSAGES.c
 H235-SECURITY-MESSAGESDec.$(OBJEXT): h323/H235-SECURITY-MESSAGESDec.c
 H235-SECURITY-MESSAGESEnc.$(OBJEXT): h323/H235-SECURITY-MESSAGESEnc.c
 H323-MESSAGES.$(OBJEXT): h323/H323-MESSAGES.c
@@ -228,7 +226,6 @@ mostlyclean-compile:
 distclean-compile:
         -rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/H235-SECURITY-MESSAGES.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/H235-SECURITY-MESSAGESDec.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/H235-SECURITY-MESSAGESEnc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/H323-MESSAGES.Po@am__quote@
@@ -283,24 +280,6 @@ distclean-depend:
 @AMDEP_TRUE@    depfile='$(DEPDIR)/$*.Plo' tmpdepfile='$(DEPDIR)/$*.TPlo' @AMDEPBACKSLASH@
 @AMDEP_TRUE@    $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
         $(LTCOMPILE) -c -o $@ `test -f '$<' || echo '$(srcdir)/'`$<
-
-H235-SECURITY-MESSAGES.o: h323/H235-SECURITY-MESSAGES.c
-@AMDEP_TRUE@    source='h323/H235-SECURITY-MESSAGES.c' object='H235-SECURITY-MESSAGES.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@    depfile='$(DEPDIR)/H235-SECURITY-MESSAGES.Po' tmpdepfile='$(DEPDIR)/H235-SECURITY-MESSAGES.TPo' @AMDEPBACKSLASH@
-@AMDEP_TRUE@    $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-        $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o H235-SECURITY-MESSAGES.o `test -f 'h323/H235-SECURITY-MESSAGES.c' || echo '$(srcdir)/'`h323/H235-SECURITY-MESSAGES.c
-
-H235-SECURITY-MESSAGES.obj: h323/H235-SECURITY-MESSAGES.c
-@AMDEP_TRUE@    source='h323/H235-SECURITY-MESSAGES.c' object='H235-SECURITY-MESSAGES.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@    depfile='$(DEPDIR)/H235-SECURITY-MESSAGES.Po' tmpdepfile='$(DEPDIR)/H235-SECURITY-MESSAGES.TPo' @AMDEPBACKSLASH@
-@AMDEP_TRUE@    $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-        $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o H235-SECURITY-MESSAGES.obj `cygpath -w h323/H235-SECURITY-MESSAGES.c`
-
-H235-SECURITY-MESSAGES.lo: h323/H235-SECURITY-MESSAGES.c
-@AMDEP_TRUE@    source='h323/H235-SECURITY-MESSAGES.c' object='H235-SECURITY-MESSAGES.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@    depfile='$(DEPDIR)/H235-SECURITY-MESSAGES.Plo' tmpdepfile='$(DEPDIR)/H235-SECURITY-MESSAGES.TPlo' @AMDEPBACKSLASH@
-@AMDEP_TRUE@    $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-        $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o H235-SECURITY-MESSAGES.lo `test -f 'h323/H235-SECURITY-MESSAGES.c' || echo '$(srcdir)/'`h323/H235-SECURITY-MESSAGES.c
 
 H235-SECURITY-MESSAGESDec.o: h323/H235-SECURITY-MESSAGESDec.c
 @AMDEP_TRUE@    source='h323/H235-SECURITY-MESSAGESDec.c' object='H235-SECURITY-MESSAGESDec.o' libtool=no @AMDEPBACKSLASH@
