--- a/tests/player/Makefile.am
+++ b/tests/player/Makefile.am
@@ -10,6 +10,6 @@ opt:
         $(MAKE) "CFLAGS = -DGNU -D_GNU_SOURCE -D_OOINFO -D_REENTRANT -D_COMPACT -O2" all
 
 debug:
-        $(MAKE) "CFLAGS = -g -DGNU -D_GNU_SOURCE -D_OODEBUGC -D_REENTRANT -D_COMPACT" all
+        $(MAKE) "CFLAGS = -g -DGNU -D_GNU_SOURCE -D_OODEBUGC -D_REENTRANT" all
 
 EXTRA_DIST = ooPlayer.dsp space.raw states.wav space.wav
