--- a/tests/chansetup/Makefile.am
+++ b/tests/chansetup/Makefile.am
@@ -6,7 +6,7 @@ h323peer_LDADD = -loostk -ldl -lpthread
 h323peer_LDFLAGS = -L$(top_builddir)/src
 
 opt:
-        $(MAKE) "CFLAGS = -DGNU -D_GNU_SOURCE -D_OOINFO -D_REENTRANT -D_COMPACT -O2" all
+        $(MAKE) "CFLAGS = -DGNU -D_GNU_SOURCE -D_REENTRANT -D_COMPACT -O2" all
 
 debug:
-        $(MAKE) "CFLAGS = -g -DGNU -D_GNU_SOURCE -D_OODEBUGC -D_REENTRANT" all
+        $(MAKE) "CFLAGS = -g -DGNU -D_GNU_SOURCE -D_REENTRANT" all
