--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -99,7 +99,7 @@ CFLAGS = @OOH323CFLAGS@
 
 lib_LIBRARIES = liboostk.a
 #liboostk_la_LDFLAGS = -version-info 1:1:0
-liboostk_a_SOURCES = ooras.c ooras.h context.c ooCommon.h ooDateTime.h ooDateTime.c decode.c dlist.c encode.c errmgmt.c memheap.c memheap.h ooasn1.h  ootrace.h ootrace.c oochannels.c oochannels.h ooh245.c ooh245.h oohdr.h ooper.h ooports.c ooports.h ooq931.c ooq931.h ooCapability.c ooCapability.h ooSocket.c ooSocket.h ootypes.h perutil.c eventHandler.c eventHandler.h ooCalls.c ooCalls.h ooStackCmds.c ooStackCmds.h ooh323.c ooh323.h ooh323ep.c ooh323ep.h printHandler.c printHandler.h rtctype.c rtctype.h ooTimer.c ooTimer.h h323/H235-SECURITY-MESSAGESDec.c h323/H235-SECURITY-MESSAGESEnc.c h323/H235-SECURITY-MESSAGES.h h323/H323-MESSAGES.c h323/H323-MESSAGESDec.c h323/H323-MESSAGESEnc.c h323/H323-MESSAGES.h h323/MULTIMEDIA-SYSTEM-CONTROL.c h323/MULTIMEDIA-SYSTEM-CONTROLDec.c h323/MULTIMEDIA-SYSTEM-CONTROLEnc.c h323/MULTIMEDIA-SYSTEM-CONTROL.h
+liboostk_a_SOURCES = ooGkClient.h ooGkClient.c context.c ooCommon.h ooDateTime.h ooDateTime.c decode.c dlist.c encode.c errmgmt.c memheap.c memheap.h ooasn1.h  ootrace.h ootrace.c oochannels.c oochannels.h ooh245.c ooh245.h oohdr.h ooper.h ooports.c ooports.h ooq931.c ooq931.h ooCapability.c ooCapability.h ooSocket.c ooSocket.h ootypes.h perutil.c eventHandler.c eventHandler.h ooCalls.c ooCalls.h ooStackCmds.c ooStackCmds.h ooh323.c ooh323.h ooh323ep.c ooh323ep.h printHandler.c printHandler.h rtctype.c rtctype.h ooTimer.c ooTimer.h h323/H235-SECURITY-MESSAGESDec.c h323/H235-SECURITY-MESSAGESEnc.c h323/H235-SECURITY-MESSAGES.h h323/H323-MESSAGES.c h323/H323-MESSAGESDec.c h323/H323-MESSAGESEnc.c h323/H323-MESSAGES.h h323/MULTIMEDIA-SYSTEM-CONTROL.c h323/MULTIMEDIA-SYSTEM-CONTROLDec.c h323/MULTIMEDIA-SYSTEM-CONTROLEnc.c h323/MULTIMEDIA-SYSTEM-CONTROL.h
 
 INCLUDES = -Ih323
 
@@ -114,7 +114,7 @@ LIBRARIES = $(lib_LIBRARIES)
 
 liboostk_a_AR = $(AR) cru
 liboostk_a_LIBADD =
-am_liboostk_a_OBJECTS = ooras.$(OBJEXT) context.$(OBJEXT) \
+am_liboostk_a_OBJECTS = ooGkClient.$(OBJEXT) context.$(OBJEXT) \
         ooDateTime.$(OBJEXT) decode.$(OBJEXT) dlist.$(OBJEXT) \
         encode.$(OBJEXT) errmgmt.$(OBJEXT) memheap.$(OBJEXT) \
         ootrace.$(OBJEXT) oochannels.$(OBJEXT) ooh245.$(OBJEXT) \
@@ -150,12 +150,12 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@    ./$(DEPDIR)/errmgmt.Po ./$(DEPDIR)/eventHandler.Po \
 @AMDEP_TRUE@    ./$(DEPDIR)/memheap.Po ./$(DEPDIR)/ooCalls.Po \
 @AMDEP_TRUE@    ./$(DEPDIR)/ooCapability.Po \
-@AMDEP_TRUE@    ./$(DEPDIR)/ooDateTime.Po ./$(DEPDIR)/ooSocket.Po \
-@AMDEP_TRUE@    ./$(DEPDIR)/ooStackCmds.Po ./$(DEPDIR)/ooTimer.Po \
-@AMDEP_TRUE@    ./$(DEPDIR)/oochannels.Po ./$(DEPDIR)/ooh245.Po \
-@AMDEP_TRUE@    ./$(DEPDIR)/ooh323.Po ./$(DEPDIR)/ooh323ep.Po \
-@AMDEP_TRUE@    ./$(DEPDIR)/ooports.Po ./$(DEPDIR)/ooq931.Po \
-@AMDEP_TRUE@    ./$(DEPDIR)/ooras.Po ./$(DEPDIR)/ootrace.Po \
+@AMDEP_TRUE@    ./$(DEPDIR)/ooDateTime.Po ./$(DEPDIR)/ooGkClient.Po \
+@AMDEP_TRUE@    ./$(DEPDIR)/ooSocket.Po ./$(DEPDIR)/ooStackCmds.Po \
+@AMDEP_TRUE@    ./$(DEPDIR)/ooTimer.Po ./$(DEPDIR)/oochannels.Po \
+@AMDEP_TRUE@    ./$(DEPDIR)/ooh245.Po ./$(DEPDIR)/ooh323.Po \
+@AMDEP_TRUE@    ./$(DEPDIR)/ooh323ep.Po ./$(DEPDIR)/ooports.Po \
+@AMDEP_TRUE@    ./$(DEPDIR)/ooq931.Po ./$(DEPDIR)/ootrace.Po \
 @AMDEP_TRUE@    ./$(DEPDIR)/perutil.Po ./$(DEPDIR)/printHandler.Po \
 @AMDEP_TRUE@    ./$(DEPDIR)/rtctype.Po
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
@@ -247,6 +247,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ooCalls.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ooCapability.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ooDateTime.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ooGkClient.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ooSocket.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ooStackCmds.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ooTimer.Po@am__quote@
@@ -256,7 +257,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ooh323ep.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ooports.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ooq931.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ooras.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ootrace.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/perutil.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/printHandler.Po@am__quote@
