--- a/tests/simple/Makefile.am
+++ b/tests/simple/Makefile.am
@@ -11,4 +11,7 @@ opt:
 debug:
         $(MAKE) "CFLAGS = -g -DGNU -D_GNU_SOURCE -D_REENTRANT" all
 
+profile:
+        $(MAKE) "CFLAGS = -g -pg -DGNU -D_GNU_SOURCE -D_REENTRANT" all
+
 EXTRA_DIST = simple.dsp
