--- a/config.h.in
+++ b/config.h.in
@@ -52,6 +52,9 @@
 /* Define to 1 if you have the <netinet/in.h> header file. */
 #undef HAVE_NETINET_IN_H
 
+/* Define to 1 if you have the `pipe' function. */
+#undef HAVE_PIPE
+
 /* Define to 1 if you have the `select' function. */
 #undef HAVE_SELECT
 
