--- a/media/Makefile.am
+++ b/media/Makefile.am
@@ -13,3 +13,6 @@ opt:
 
 debug:
         $(MAKE) "CFLAGS = -g -DGNU -D_GNU_SOURCE -D_OODEBUGC -D_REENTRANT" all
+
+profile:
+        $(MAKE) "CFLAGS = -g -pg -DGNU -D_GNU_SOURCE -D_REENTRANT" all
