--- a/media/Makefile.in
+++ b/media/Makefile.in
@@ -86,7 +86,7 @@ VERSION = @VERSION@
 am__include = @am__include@
 am__quote = @am__quote@
 install_sh = @install_sh@
-AUTOMKAE_OPTIONS = gnu
+AUTOMAKE_OPTIONS = gnu
 CFLAGS = @OOH323CFLAGS@
 
 lib_LTLIBRARIES = liboomedia.la
